# shared-encryption

./: .gitignore  CHANGELOG.md  README.md
senc/: CMakeLists.txt  CMakePresets.json  cpp.hint
senc/cli_client/: CMakeLists.txt  main.cpp
senc/client/: CMakeLists.txt  input.cpp  input.hpp  input_impl.hpp  main.cpp  output.cpp  output.hpp
senc/client/io/: input.cpp  input.hpp  output.cpp
senc/client_api/: CMakeLists.txt  Client.hpp  ClientException.hpp  ClientUtils.cpp  ClientUtils.hpp  Client_impl.hpp  Error.cpp  Error.hpp  Handle.hpp  IClient.hpp  Value.hpp  ValueOrError.hpp  Value_impl.hpp  client_api.cpp  client_api.h  client_api.hpp
senc/client_api/storage/: ProfileRecord.cpp  ProfileRecord.hpp  ProfileStorage.cpp  ProfileStorage.hpp
senc/common/: CMakeLists.txt  ClientPacketHandlerFactory.hpp  ConnEstablishException.hpp  EncryptedPacketHandler.cpp  EncryptedPacketHandler.hpp  EncryptedPacketReceiver.cpp  EncryptedPacketReceiver.hpp  EncryptedPacketSender.cpp  EncryptedPacketSender.hpp  IPacketHandlerSyncData.hpp  InlinePacketHandler.cpp  InlinePacketHandler.hpp  InlinePacketReceiver.cpp  InlinePacketReceiver.hpp  InlinePacketSender.cpp  InlinePacketSender.hpp  KeyEvolver.cpp  KeyEvolver.hpp  KeyedPacketHandlerSyncData.hpp  KeyedPacketHandlerSyncData_impl.hpp  PacketHandler.hpp  PacketHandlerFactory.hpp  PacketReceiver.cpp  PacketReceiver.hpp  PacketReceiver_impl.hpp  PacketSender.cpp  PacketSender.hpp  PlainPacketHandlerSyncData.cpp  PlainPacketHandlerSyncData.hpp  QueuedPacketHandler.cpp  QueuedPacketHandler.hpp  QueuedPacketHandler_impl.hpp  ServerPacketHandlerFactory.hpp  SockUtils.cpp  SockUtils.hpp  aliases.cpp  aliases.hpp  packets.hpp  sizes.hpp
senc/debug_client/: CMakeLists.txt  main.cpp
senc/debug_client/io/: input.cpp  input.hpp  input_impl.hpp  output.cpp  output.hpp
senc/packets/: CMakeLists.txt
senc/senc/: CMakeLists.txt
senc/server/: CMakeLists.txt  ClientHandlerFactory.cpp  ClientHandlerFactory.hpp  ConnectedClientHandler.cpp  ConnectedClientHandler.hpp  ConnectedClientLogger.hpp  ConnectedLogger.hpp  ConnectingClientHandler.cpp  ConnectingClientHandler.hpp  ConnectingClientLogger.hpp  ConnectingLogger.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  DecryptionsManager.cpp  DecryptionsManager.hpp  DummyLogger.hpp  ILogger.hpp  IServer.hpp  IServerStorage.hpp  InteractiveConsole.cpp  InteractiveConsole.hpp  InteractiveConsole_linux.cpp  InteractiveConsole_windows.cpp  Logger.hpp  Server.cpp  Server.hpp  ServerException.hpp  Server_impl.hpp  ShortTermServerStorage.cpp  ShortTermServerStorage.hpp  UpdateManager.cpp  UpdateManager.hpp  UserExistsException.hpp  aliases.hpp  main.cpp
senc/server/handlers/: ClientHandlerFactory.cpp  ClientHandlerFactory.hpp  ConnectedClientHandler.cpp  ConnectedClientHandler.hpp  ConnectingClientHandler.cpp  ConnectingClientHandler.hpp
senc/server/io/: InteractiveConsole.hpp  InteractiveConsole_linux.cpp  InteractiveConsole_windows.cpp
senc/server/loggers/: ConnectedClientLogger.hpp  ConnectingClientLogger.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  DummyLogger.hpp  ILogger.hpp
senc/server/managers/: DecryptionsManager.cpp  DecryptionsManager.hpp  UpdateManager.cpp  UpdateManager.hpp
senc/server/storage/: IServerStorage.hpp  ShortTermServerStorage.cpp  ShortTermServerStorage.hpp  SqliteServerStorage.cpp  SqliteServerStorage.hpp
senc/tests/: CMakeLists.txt  cpp.hint  test_bin_file.cpp  test_bytes.cpp  test_client_api.cpp  test_client_storage.cpp  test_common.cpp  test_enc.cpp  test_fraction.cpp  test_main.cpp  test_modint.cpp  test_poly.cpp  test_ranges.cpp  test_server.cpp  test_server_storage.cpp  test_shamir.cpp  test_socket.cpp  test_sql.cpp  test_storage.cpp  test_strs.cpp  test_threshold_enc.cpp  tests_utils.cpp  tests_utils.hpp
senc/utils/: AtScopeExit.cpp  AtScopeExit.hpp  BinFile.hpp  BinFile_impl.hpp  CMakeLists.txt  ECGroup.cpp  ECGroup.hpp  Exception.cpp  Exception.hpp  FixedString.hpp  Fraction.cpp  Fraction.hpp  Fraction_impl.hpp  Group.hpp  ModInt.cpp  ModInt.hpp  ModInt_impl.hpp  Random.cpp  Random.hpp  Random_impl.hpp  Shamir.hpp  Shamir_impl.hpp  Socket.cpp  Socket.hpp  Socket_impl.hpp  StrParseException.cpp  StrParseException.hpp  bytes.cpp  bytes.hpp  bytes_impl.hpp  concepts.hpp  datetime.hpp  env.hpp  file_exceptions.hpp  hash.hpp  ip.cpp  ip.hpp  math.hpp  poly.hpp  poly_impl.hpp  (+14 more)
senc/utils/enc/: AES1L.cpp  AES1L.hpp  Asymmetric2L.hpp  ECHKDF1L.cpp  ECHKDF1L.hpp  ECHKDF2L.cpp  ECHKDF2L.hpp  HybridElGamal2L.hpp  HybridElGamal2L_impl.hpp  Symmetric1L.hpp  general.hpp
senc/utils/pwd/: PBKDF2.cpp  PBKDF2.hpp  PBKDF2_impl.hpp  general.hpp
senc/utils/sqlite/: Database.hpp  Database_impl.hpp  SQLiteException.hpp  TableView.hpp  TableView_impl.hpp  aggr.hpp  args.hpp  sqlite_utils.hpp  sqlite_utils_impl.hpp  values.cpp  values.hpp  values_impl.hpp
senc/utils/sqlite/schemas/: DBs.hpp  all.hpp  columns.hpp  join.hpp  select.hpp  tables.hpp
