add_library(senc_utils
	"env.hpp"
	"winapi_patch.hpp"
	"AtScopeExit.hpp"
	"AtScopeExit.cpp"
	"bytes.hpp"
	"bytes.cpp"
	"strs.hpp"
	"bytes_impl.hpp"
	"concepts.hpp"
	"FixedString.hpp"
	"hash.hpp"
	"variants.hpp"
	"ranges.hpp"
	"ranges_impl.hpp"
	"math.hpp"
	"Exception.hpp"
	"Exception.cpp"
	"StrParseException.hpp"
	"port.hpp"
	"port.cpp"
	"ip.hpp"
	"ip.cpp"
	"Socket.hpp"
	"Socket.cpp"
	"Socket_impl.hpp"
	"poly.hpp"
	"poly_impl.hpp"
	"Random.hpp"
	"Random_impl.hpp"
	"ModInt.hpp"
	"ModInt_impl.hpp"
	"Fraction.hpp"
	"Fraction_impl.hpp"
	"Group.hpp"
	"ECGroup.hpp"
	"ECGroup.cpp"
	"enc/general.hpp"
	"enc/HybridElGamal2L.hpp"
	"enc/HybridElGamal2L_impl.hpp"
	"enc/AES1L.hpp"
	"enc/AES1L.cpp"
	"enc/ECHKDF1L.hpp"
	"enc/ECHKDF1L.cpp"
	"enc/ECHKDF2L.hpp"
	"enc/ECHKDF2L.cpp"
	"Shamir.hpp"
	"Shamir_impl.hpp"
	"uuid.hpp"
	"uuid.cpp"
	"uuid_impl.hpp"
	"pwd/general.hpp"
	"pwd/PBKDF2.hpp"
	"pwd/PBKDF2.cpp"
	"datetime.hpp"
	"sqlite/SQLiteException.hpp"
	"sqlite/values.hpp"
	"sqlite/values.cpp"
	"sqlite/values_impl.hpp"
	"sqlite/aggr.hpp"
	"sqlite/args.hpp"
)

if (WIN32)
	target_link_libraries(senc_utils PRIVATE ws2_32 Rpcrt4)
else()
	target_link_libraries(senc_utils PUBLIC libuuid)
endif()

target_link_libraries(senc_utils PUBLIC cryptopp sqlite3)

set_property(TARGET senc_utils PROPERTY CXX_STANDARD 20)
